--- a/Client/Shared/NavMenu.razor.css
+++ b/Client/Shared/NavMenu.razor.css
@@ -5,6 +5,7 @@
 .top-row {
     height: 3.5rem;
     background-color: rgba(0,0,0,0.4);
+    border-bottom: 1px solid #d6d5d5;
 }
 
 .navbar-brand {
