basic file download

--- a/Client/Pages/Fiction.razor
+++ b/Client/Pages/Fiction.razor
@@ -4,5 +4,9 @@
 
 <h1>Fiction</h1>
 
+<div>
+    <DownloadablePDF fileName="Test.pdf" fileURL="https://localhost:7164/files/Test.pdf"/>
+</div>
+
 @code {
 }
