--- a/Client/Pages/Fiction.razor
+++ b/Client/Pages/Fiction.razor
@@ -4,9 +4,9 @@
 
 <h1>Fiction</h1>
 
-<div>
-    <DownloadablePDF fileName="Test.pdf" fileURL="https://localhost:7164/files/Test.pdf"/>
-</div>
+<DownloadablePDF fileName="Test1.pdf" fileURL="https://localhost:7164/files/Test.pdf"/>
+<DownloadablePDF fileName="Test2.pdf" fileURL="https://localhost:7164/files/Test.pdf"/>
+<DownloadablePDF fileName="Test3.pdf" fileURL="https://localhost:7164/files/Test.pdf"/>
 
 @code {
 }
