general tweaks, still trying to figure out bottom nav bar

--- a/Client/Pages/FictionPage.razor
+++ b/Client/Pages/FictionPage.razor
@@ -19,6 +19,27 @@
                 summary="This is a test summary. I'm increasing the length so that I can see if the text will wrap when the page renders.
                         Can I keep adding on after I hit enter and tab in a few spaces to align the source? Let's find out!"
     />
+
+        <DocumentCard name="Title2" 
+                fileName="title.pdf" 
+                fileURL="https://localhost:7164/files/documents/Test.pdf"
+                summary="This is a test summary. I'm increasing the length so that I can see if the text will wrap when the page renders.
+                        Can I keep adding on after I hit enter and tab in a few spaces to align the source? Let's find out!"
+    />
+
+        <DocumentCard name="Title2" 
+                fileName="title.pdf" 
+                fileURL="https://localhost:7164/files/documents/Test.pdf"
+                summary="This is a test summary. I'm increasing the length so that I can see if the text will wrap when the page renders.
+                        Can I keep adding on after I hit enter and tab in a few spaces to align the source? Let's find out!"
+    />
+
+        <DocumentCard name="Title2" 
+                fileName="title.pdf" 
+                fileURL="https://localhost:7164/files/documents/Test.pdf"
+                summary="This is a test summary. I'm increasing the length so that I can see if the text will wrap when the page renders.
+                        Can I keep adding on after I hit enter and tab in a few spaces to align the source? Let's find out!"
+    />
 </div>
 
 
