--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -13,5 +13,9 @@
         <article class="content px-4">
             @Body
         </article>
+        
+        <div class="bottom-row px-4">
+            Bottom row text here.
+        </div>
     </main>
 </div>
