--- a/Client/Shared/MainLayout.razor.css
+++ b/Client/Shared/MainLayout.razor.css
@@ -39,6 +39,16 @@ main {
         text-overflow: ellipsis;
     }
 
+.bottom-row {
+    position: fixed;
+    background-color: #2b2b2b;
+    border-bottom: 1px solid #d6d5d5;
+    justify-content: flex-end;
+    height: 3.5rem;
+    display: flex;
+    align-items: center;
+}
+
 @media (max-width: 640.98px) {
     .top-row:not(.auth) {
         display: none;
@@ -77,7 +87,24 @@ main {
         width: 0;
     }
 
-    .top-row, article {
+    .bottom-row, article {
+        padding-left: 2rem !important;
+        padding-right: 1.5rem !important;
+    }
+
+    .bottom-row {
+        position: sticky;
+        top: 0;
+        z-index: 1;
+    }
+
+    .bottom-row.auth ::deep a:first-child {
+        flex: 1;
+        text-align: right;
+        width: 0;
+    }
+
+    .bottom-row, article {
         padding-left: 2rem !important;
         padding-right: 1.5rem !important;
     }
